--- a/pages/detail.html
+++ b/pages/detail.html
@@ -6,6 +6,20 @@
     <title>Detail</title>
 </head>
 <body>
+ <header>
+    <na>
+        <ul class="navbar">
+            <li><a href="#">Abaout</a></li>
+            <li>Details</li>
+            <li><a href="#">My list</a></li>
+            <li><a href="#">Profile</a></li>
+            <li><a href="#">Recent</a></li>
+            <li><a href="#">Review</a></li>
+        </ul>
+    </nav>
+ </header>
+ <div>
     
+ </div>  
 </body>
 </html>
