un poco de html y ccs

--- a/pages/detail.html
+++ b/pages/detail.html
@@ -3,23 +3,61 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Detail</title>
 </head>
 <body>
- <header>
-    <na>
-        <ul class="navbar">
-            <li><a href="#">Abaout</a></li>
-            <li>Details</li>
-            <li><a href="#">My list</a></li>
-            <li><a href="#">Profile</a></li>
-            <li><a href="#">Recent</a></li>
-            <li><a href="#">Review</a></li>
-        </ul>
-    </nav>
- </header>
- <div>
-    
- </div>  
+   <header>
+    <div class="content">
+        <nav>
+            <a href="#">Home</a>
+            <a href="#">Details</a>
+            <a href="#">My list</a>
+            <a href="#">profile</a>
+            <a href="#">Recent</a>
+            <a href="#">Review</a>
+        </nav>
+    </div>
+</header>
+ <div class="content-2">
+    <h1>El viento conoce mi nombre <br>Isasbel Allende</h1>
+        <img src="../imges/el-viento-conoce-mi-nombre.jpg" class="imga1" alt="">
+        <h2>Resumen y sinopsis</h2>
+            <p>Viena, 1938. Samuel Adler es un niño judío de seis años cuyo padre desaparece durante la Noche de los Cristales Rotos, en la que su familia lo pierde todo. Su madre, desesperada, le consigue una plaza en un tren que le llevará desde la Austria nazi hasta Inglaterra. Samuel emprende una nueva etapa con su fiel violín y con el peso de la soledad y la incertidumbre, que lo acompañarán siempre en su dilatada vida.</p>
+    </div>
+        <section class="contenedorautor">
+            <div class="cabecera">
+                <div class="nombre">
+                    <h2>Otros libros del autor</h2>
+                </div>
+                <div class="libro1">
+                <h3>Mas alla del Invierno</h3>
+                <img src="../imges/invierno.jpg" class="imga2" alt=""><br>
+                <button> + Info </button>
+            </div>
+            <div class="libro2">
+                <h3>Violeta</h3>
+                <img src="../imges/invierno.jpg" class="imga2" alt=""><br>
+                <button> + Info </button>          
+            </div>
+            <div class="libro3">
+                <h3>Largo petalo de mar</h3>
+                <img src="../imges/invierno.jpg" class="imga2" alt=""><br>
+                <button> + Info </button>          
+            </div>
+            </div> 
+        </section>
+ <footer>
+    <div class="conteiner">
+        <div class="Redes">
+            <h4>Redes sociales</h4>
+            <ul>
+                <li><a href="#">Facebook</a></li>
+                <li><a href="#">Twitter</a></li>
+                <li><a href="#">Instagram</a></li>
+                <li><a href="#">Youtube</a></li> 
+        </div>
+    </div>
+ </footer>
 </body>
 </html>
