--- a/pages/detail.html
+++ b/pages/detail.html
@@ -20,13 +20,38 @@
             <i class="fa-solid fa-magnifying-glass"></i>
         </div>
     </header>
-<div class="contenedor-comienzo">
-        <div id="imagen1"></div>
-        <article class="presentacion">
-            <h1>Titulo del libro</h1>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ad nesciunt nulla dignissimos ipsum incidunt ea, iure eius cupiditate tempora. In consectetur cupiditate dolorum quia, blanditiis excepturi labore animi neque sed.</p>
-        </article>
-</div>
+    <main>
+        <div class="contenedor-comienzo">
+            <div class="titulo">
+                <h1>Titulo del libro</h1>
+            </div>
+            <div id="imagen1"></div>
+            <div class="atributos">
+                <div class="atributos-p">
+                    <h2>editorial</h2>
+                </div>
+                <div class="atributos-p">
+                    <h2>año de publicacion</h2>
+                </div>
+                <div class="atributos-p">
+                    <h2>temas</h2>
+                </div class="atributos-p">
+                <div>
+                    <h2>nota media</h2>
+                </div>
+            </div>
+            <article class="presentacion">
+                
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ad nesciunt nulla dignissimos ipsum incidunt ea, iure eius cupiditate tempora. In consectetur cupiditate dolorum quia, blanditiis excepturi labore animi neque sed.</p>
+            </article>
+            <div class="iconos">
+                <a href="#"><i class="fa-solid fa-heart"></i></a>
+                <a href="#"><i class="fa-duotone fa-comment"></i></a>
+                <a href="#"><i class="fa-solid fa-bookmark"></i></a>
+                <a href="#"><i class="fa-duotone fa-clipboard"></i></a>
+            </div>
+        </div>
+    </main>
     <section class="content">
         <div class="content-coment">
             <h2>Comentarios y opiniones de "Mas alla del invierno"</h2>
@@ -49,42 +74,6 @@
     </section>
 <div class="central">
     <section class="libros">
-        <article class="libro1">
-            <a href="#">
-                <figure class="fg1">
-                    <img src="../imges/invierno.jpg" alt="">
-                </figure>
-            </a>
-            <div class="contenido-libro">
-                <h2>Lorem ipsum dolor sit</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates aperiam omnis recusandae asperiores, quis vel iure voluptatem voluptatum possimus natus dolor tempore.</p>
-                <button>+ Info</button>
-            </div>
-        </article>
-        <article class="libro1">
-            <a href="#">
-                <figure class="fg1">
-                    <img src="../imges/el-viento-conoce-mi-nombre.jpg" alt="">
-                </figure>
-            </a>
-            <div class="contenido-libro">
-                <h2>Lorem ipsum dolor sit</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates aperiam omnis recusandae asperiores, quis vel iure voluptatem voluptatum possimus natus dolor tempore.</p>
-                <button>+ Info</button>
-            </div>
-        </article>
-        <article class="libro1">
-            <a href="#">
-                <figure class="fg1">
-                    <img src="../imges/la suma.jpg" alt="">
-                </figure>
-            </a>
-            <div class="contenido-libro">
-                <h2>Lorem ipsum dolor sit</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates aperiam omnis recusandae asperiores, quis vel iure voluptatem voluptatum possimus natus dolor tempore.</p>
-                <button>+ Info</button>
-            </div>
-        </article>
         <article class="libro1">
             <a href="#">
                 <figure class="fg1">
@@ -138,8 +127,6 @@
             <li><a href="about.html"><i class="fa-solid fa-circle-info"></i></a></li>
         </ul>
     </nav>
-
-   
 <script src="https://kit.fontawesome.com/63ed2924ae.js" crossorigin="anonymous"></script>
  </footer>
 </body>
