--- a/pages/detail.html
+++ b/pages/detail.html
@@ -8,8 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Reem+Kufi+Fun:wght@400..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
-
-    <title><Details></Details></title>
+    <title>Details</title>
 </head>
 <body>
     <header class="contenedorh">
@@ -25,7 +24,9 @@
             <div class="titulo">
                 <h1>Titulo del libro</h1>
             </div>
-            <div id="imagen1"></div>
+            <div id="imagen1">
+                <img src="../imges/study-7332172_1280.png" alt="">
+            </div>
             <div class="atributos">
                 <div class="atributos-p">
                     <h2>editorial</h2>
@@ -35,20 +36,20 @@
                 </div>
                 <div class="atributos-p">
                     <h2>temas</h2>
-                </div class="atributos-p">
-                <div>
+                </div>
+                <div class="atributos-p">
                     <h2>nota media</h2>
                 </div>
             </div>
-            <article class="presentacion">
-                
+        <article class="presentacion"> 
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ad nesciunt nulla dignissimos ipsum incidunt ea, iure eius cupiditate tempora. In consectetur cupiditate dolorum quia, blanditiis excepturi labore animi neque sed.</p>
             </article>
             <div class="iconos">
                 <a href="#"><i class="fa-solid fa-heart"></i></a>
-                <a href="#"><i class="fa-duotone fa-comment"></i></a>
+                <a href="#"><i class="fa-solid fa-comment"></i></a>
                 <a href="#"><i class="fa-solid fa-bookmark"></i></a>
-                <a href="#"><i class="fa-duotone fa-clipboard"></i></a>
+                <a href="#"><i class="fa-sharp fa-solid fa-check"></i></a>
+                <a href="#"><i class="fa-sharp fa-solid fa-book"></i></a>
             </div>
         </div>
     </main>
@@ -58,60 +59,86 @@
             <article class="comentarios">
                 <h3>maria</h3>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita nam tenetur totam reiciendis facere maxime enim officiis fugiat. Cupiditate sed asperiores est! Optio, reiciendis sit dolorem aliquam rem repellat architecto.</p>
-                <div class="imagenpuntuacion"></div>
-            </article>
+                <div><i class="fa-solid fa-user"></i></div>
             <article class="comentarios">
                 <h3>pedro</h3>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita nam tenetur totam reiciendis facere maxime enim officiis fugiat. Cupiditate sed asperiores est! Optio, reiciendis sit dolorem aliquam rem repellat architecto.</p>
-                <div id="imagenpuntuacion"></div>
+                <div><i class="fa-solid fa-user"></i></div>
             </article>
             <article class="comentarios">
                 <h3>juan</h3>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita nam tenetur totam reiciendis facere maxime enim officiis fugiat. Cupiditate sed asperiores est! Optio, reiciendis sit dolorem aliquam rem repellat architecto.</p>
-                <div class="imagenpuntuacion"></div>
+                <div><i class="fa-solid fa-user"></i></div>
             </article>
         </div>   
     </section>
-<div class="central">
-    <section class="libros">
-        <article class="libro1">
-            <a href="#">
-                <figure class="fg1">
-                    <img src="../imges/el-juego-de-ripper.webp" alt="">
-                </figure>
-            </a>
-            <div class="contenido-libro">
-                <h2>Lorem ipsum dolor sit</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates aperiam omnis recusandae asperiores, quis vel iure voluptatem voluptatum possimus natus dolor tempore.</p>
-                <button>+ Info</button>
+    <div class="cabecera">
+        <div class="centrado">
+            <div class="site-branding">
+                <h1 class="nombre-sitio"><span>Otros Libros del autor</span></h1>
             </div>
-        </article>
-        <article class="libro1">
-            <a href="#">
-                <figure class="fg1">
-                    <img src="../imges/isaallende.jpg" alt="">
-                </figure>
-            </a>
-            <div class="contenido-libro">
-                <h2>Lorem ipsum dolor sit</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates aperiam omnis recusandae asperiores, quis vel iure voluptatem voluptatum possimus natus dolor tempore.</p>
-                <button>+ Info</button>
             </div>
-        </article>
-        <article class="libro1">
-            <a href="#">
-                <figure class="fg1">
-                    <img src="../imges/isaallende2.png" alt="">
-                </figure>
-            </a>
-            <div class="contenido-libro">
-                <h2>Lorem ipsum dolor sit</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates aperiam omnis recusandae asperiores, quis vel iure voluptatem voluptatum possimus natus dolor tempore.</p>
-                <button>+ Info</button>
-            </div>
-        </article>
-    </section>
-</div>
+        </div>
+    </div>
+    <div class="centrado">  
+            <section class="libros">
+                <article class="libro">
+                    <a href="#">
+                        <figure>
+                            <img src="../imges/el-juego-de-ripper.webp" alt="Imagen 1">
+                        </figure>
+                    </a>
+                    <div class="libro-content"> 
+                        <h2>Título del libro</h2>
+                        <button>+ Info</button>
+                    </div>
+                </article>
+                <article class="libro">
+                    <a href="#">
+                        <figure>
+                            <img src="../imges/invierno.jpg" alt="Imagen 2">
+                        </figure>
+                    </a>
+                    <div class="libro-content"> 
+                        <h2>Título del libro</h2>
+                        <button>+ Info</button>
+                    </div>
+                </article>
+                <article class="libro">
+                    <a href="#">
+                        <figure>
+                            <img src="../imges/la suma.jpg" alt="Imagen 3">
+                        </figure>
+                    </a>
+                    <div class="libro-content"> 
+                        <h2>Título del libro</h2>
+                        <button>+ Info</button>
+                    </div>
+                </article>
+                <article class="libro">
+                    <a href="#">
+                        <figure>
+                            <img src="../imges/isaallende2.png" alt="Imagen 4">
+                        </figure>
+                    </a>
+                    <div class="libro-content"> 
+                        <h2>Título del libro</h2>
+                        <button>+ Info</button>
+                    </div>
+                </article>
+                <article class="libro">
+                    <a href="#">
+                        <figure>
+                            <img src="../imges/isaallende2.png" alt="Imagen 4">
+                        </figure>
+                    </a>
+                    <div class="libro-content"> 
+                        <h2>Título del libro</h2>
+                        <button>+ Info</button>
+                    </div>
+                </article>
+            </section>
+    </div>
  <footer>
     <footer>    
         Footer
