--- a/pages/detail.html
+++ b/pages/detail.html
@@ -24,7 +24,7 @@
             <div class="titulo">
                 <h1>Titulo del libro</h1>
             </div>
-            <div id="imagen1">
+            <div class="imagen1">
                 <img src="../imges/study-7332172_1280.png" alt="">
             </div>
             <div class="atributos">
@@ -57,16 +57,22 @@
         <div class="content-coment">
             <h2>Comentarios y opiniones de "Mas alla del invierno"</h2>
             <article class="comentarios">
-                <h3>maria</h3>
+                <h3>Maria</h3> 
+                <h4>El viento conoce mi nombre</h4> 
+                <h6>24 de abril 2023</h6>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita nam tenetur totam reiciendis facere maxime enim officiis fugiat. Cupiditate sed asperiores est! Optio, reiciendis sit dolorem aliquam rem repellat architecto.</p>
                 <div><i class="fa-solid fa-user"></i></div>
             <article class="comentarios">
-                <h3>pedro</h3>
+                <h3>Juan</h3> 
+                <h4>El viento conoce mi nombre</h4> 
+                <h6>24 de abril 2023</h6>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita nam tenetur totam reiciendis facere maxime enim officiis fugiat. Cupiditate sed asperiores est! Optio, reiciendis sit dolorem aliquam rem repellat architecto.</p>
                 <div><i class="fa-solid fa-user"></i></div>
             </article>
             <article class="comentarios">
-                <h3>juan</h3>
+                <h3>Pedro</h3> 
+                <h4>El viento conoce mi nombre</h4> 
+                <h6>24 de abril 2023</h6>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita nam tenetur totam reiciendis facere maxime enim officiis fugiat. Cupiditate sed asperiores est! Optio, reiciendis sit dolorem aliquam rem repellat architecto.</p>
                 <div><i class="fa-solid fa-user"></i></div>
             </article>
@@ -85,55 +91,50 @@
                 <article class="libro">
                     <a href="#">
                         <figure>
-                            <img src="../imges/el-juego-de-ripper.webp" alt="Imagen 1">
+                            <img src="../imges/el-juego-de-ripper.webp" class="imag" alt="Imagen 1">
                         </figure>
                     </a>
                     <div class="libro-content"> 
-                        <h2>Título del libro</h2>
                         <button>+ Info</button>
                     </div>
                 </article>
                 <article class="libro">
                     <a href="#">
                         <figure>
-                            <img src="../imges/invierno.jpg" alt="Imagen 2">
+                            <img src="../imges/invierno.jpg" class="imag" alt="Imagen 2">
                         </figure>
                     </a>
                     <div class="libro-content"> 
-                        <h2>Título del libro</h2>
                         <button>+ Info</button>
                     </div>
                 </article>
                 <article class="libro">
                     <a href="#">
                         <figure>
-                            <img src="../imges/la suma.jpg" alt="Imagen 3">
+                            <img src="../imges/la suma.jpg" class="imag" alt="Imagen 3">
                         </figure>
                     </a>
                     <div class="libro-content"> 
-                        <h2>Título del libro</h2>
                         <button>+ Info</button>
                     </div>
                 </article>
                 <article class="libro">
                     <a href="#">
                         <figure>
-                            <img src="../imges/isaallende2.png" alt="Imagen 4">
+                            <img src="../imges/invierno.jpg" class="imag" alt="Imagen 4">
                         </figure>
                     </a>
-                    <div class="libro-content"> 
-                        <h2>Título del libro</h2>
+                    <div class="libro-content">
                         <button>+ Info</button>
                     </div>
                 </article>
                 <article class="libro">
                     <a href="#">
                         <figure>
-                            <img src="../imges/isaallende2.png" alt="Imagen 4">
+                            <img src="../imges/isaallende.jpg" class="imag" alt="Imagen 4">
                         </figure>
                     </a>
                     <div class="libro-content"> 
-                        <h2>Título del libro</h2>
                         <button>+ Info</button>
                     </div>
                 </article>
