--- a/pages/detail.html
+++ b/pages/detail.html
@@ -20,30 +20,24 @@
         </div>
     </header>
     <main>
-        <div class="contenedor-comienzo">
-            <div class="titulo">
-                <h1>Titulo del libro</h1>
-            </div>
-            <div class="imagen1">
-                <img src="../imges/study-7332172_1280.png" alt="">
-            </div>
-            <div class="atributos">
-                <div class="atributos-p">
-                    <h2>editorial</h2>
+        <div class="detail-contenedor-comienzo">
+            <h1 id="titulo1">Titulo del libro</h1>
+            <div class="detail-imagen-atributos">
+                <div class="imagen1">
+                    <img src="../imges/study-7332172_1280.png" alt="">
                 </div>
-                <div class="atributos-p">
+                <div class="detail-atributos-article"><h2>editorial</h2>
                     <h2>año de publicacion</h2>
-                </div>
-                <div class="atributos-p">
                     <h2>temas</h2>
-                </div>
-                <div class="atributos-p">
                     <h2>nota media</h2>
+                    <article class="presentacion"> 
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ad nesciunt nulla dignissimos ipsum incidunt ea, iure eius cupiditate tempora. In consectetur cupiditate dolorum quia, blanditiis excepturi labore animi neque sed.</p>
+                    </article>
                 </div>
+                <!-- <div class="atributos">           
+                </div> -->
             </div>
-        <article class="presentacion"> 
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ad nesciunt nulla dignissimos ipsum incidunt ea, iure eius cupiditate tempora. In consectetur cupiditate dolorum quia, blanditiis excepturi labore animi neque sed.</p>
-            </article>
+          
             <div class="iconos">
                 <a href="#"><i class="fa-solid fa-heart"></i></a>
                 <a href="#"><i class="fa-solid fa-comment"></i></a>
